--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 pip install --upgrade \
- click==8.2.1 \
- greenlet==3.2.3 \
- pathspec==0.12.1 \
- platformdirs==4.3.8 \
- typing_extensions==4.14.0
+  click==8.2.1 \
+  greenlet==3.2.3 \
+  pathspec==0.12.1 \
+  platformdirs==4.3.8 \
+  typing_extensions==4.14.0 \
+  playwright \
+  neotermcolor
+
+playwright install
